# cognitao_ros2

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  cogniTao_Install.sh  package.xml  ros_config_debug.json
action/: Action.action  ActionMsg.action
action_manager/: CMakeLists.txt  package.xml
action_manager/action/: ActionMsg.action
action_manager/msg/: KeyValMsg.msg  ParamtersMsg.msg
cognitao_ros2/: CMakeLists.txt  README.md  mapping_rules.yaml  package.xml
cognitao_ros2/include/: BehaviourRosProxy.h  BehaviourThreadRosProxy.h  Ros2Runner.h  Ros2RunnerFactoryMethod.h  RosDataSource.h  StateRosProxy.h  TaskFactoryMethodRos2.h
cognitao_ros2/include/cognitao_ros2/: MinimalActionServer.h  MinimalActionServerExample.h
cognitao_ros2/include/cognitao_ros2/client/: BehaviourRosProxy.h  BehaviourThreadRosProxy.h  Ros2Runner.h  StateThreadRosProxy.h  TaskFactoryMethodRos2.h
cognitao_ros2/include/cognitao_ros2/data_source/: Ros2DataSource.h
cognitao_ros2/include/cognitao_ros2/server_example/: MinimalActionServerExample.h
cognitao_ros2/machines/: ros_bt_debug.xml
cognitao_ros2/msg/: GoalMsg.msg
cognitao_ros2/src/: MinimalActionServer.cpp  Ros2DataSource.cpp  Ros2DataSource_pluggin.cpp  Ros2Runner.cpp  Ros2RunnerPlugin.cpp  main.cpp  server_example_main.cpp  server_main.cpp
cognitao_ros2/src/server_example/: MinimalActionServerExample.cpp  server_example_main.cpp
cognitao_ros2_action_server/: CMakeLists.txt  package.xml
cognitao_ros2_action_server/include/: MinimalActionServer.h  backup.hpp
cognitao_ros2_action_server/src/: main.cpp
cognitao_ros2_action_server_example/: CMakeLists.txt  package.xml
cognitao_ros2_action_server_example/include/: MinimalActionServerExample.h
cognitao_ros2_action_server_example/src/: main.cpp
include/: RosDataSource.h  StateRosProxy.h
include/cognitao_ros2/client/: Ros2Runner.h
include/cognitao_ros2/data_source/: Ros2DataSource.h
include/cognitao_ros2/runner/: Ros2Runner.h
include/cognitao_ros2/server/: MinimalActionServer.h  Ros2ActionContext.h  Ros2ActionServer.h
include/cognitao_ros2/server_example/: MinimalActionServerExample.h  Ros2ActionWaitServer.h
msg/: Goal.msg  KeyValue.msg
ros2_cognitao_msgs/: CMakeLists.txt  package.xml
src/: Ros2Runner.cpp  Ros2RunnerPlugin.cpp  main.cpp
src/client/: Ros2Runner.cpp  Ros2RunnerPlugin.cpp
src/data_source/: Ros2DataSource.cpp  Ros2DataSource_pluggin.cpp
src/ros2_dataSource/: Ros2DataSource.cpp  Ros2DataSource_pluggin.cpp
src/runner/: Ros2Runner.cpp  Ros2RunnerPlugin.cpp
src/server/: server_main.cpp
src/server_example/: server_example_main.cpp
