<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>cognitao_ros2_action_server</name>
  <version>0.6.3</version>
  <description>TODO: Package description</description>
  <maintainer email="yakir@cogniteam.com">yakir</maintainer>
  <license>Apache License 2.0</license>
  <author email="yakir@cogniteam.com">yakir</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>example_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

