<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>cognitao_ros2_action_server_example</name>
  <version>0.6.3</version>
  <description>Minimal action server examples</description>

  <maintainer email="ari@cogniteam.com">ari</maintainer>
  <license>MIT</license>
  <author email="ari@cogniteam.com">ari</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>example_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


